Fix blog content on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,6 +19,10 @@ code::after {
     display: none;
 }
 
+.prose-lg ul p {
+    margin: 0;
+}
+
 @media (prefers-color-scheme: dark) {
     :root {
         color-scheme: dark;
